knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Agreement__c.field-meta.xml
<CustomField>
    <fullName>Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agreement</label>
    <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
    <relationshipLabel>Provider Network Contracts</relationshipLabel>
    <relationshipName>Provider_Network_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>