knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/BAA__c.field-meta.xml
<CustomField>
    <fullName>BAA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BAA</label>
    <type>Checkbox</type>
</CustomField>