knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Cloned_From__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From</label>
    <referenceTo>ProviderNetworkContract</referenceTo>
    <relationshipLabel>Provider Network Contracts</relationshipLabel>
    <relationshipName>Provider_Network_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>