knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Contract_Agreement_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement_Category__c</fullName>
    <description>As part of PR1050558-887 User story we build this formula</description>
    <formula>Text(Contract.Agreement_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Agreement Category</label>
    <type>Text</type>
</CustomField>