knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Contract_Cancelled_Reason__c.field-meta.xml
<CustomField>
    <fullName>Contract_Cancelled_Reason__c</fullName>
    <formula>TEXT(Contract.Cancel_Reason__c)</formula>
    <label>Contract Cancelled Reason</label>
    <type>Text</type>
</CustomField>