knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; ContractId, Contract.Name, &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>