knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Contract_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Opportunity_Id__c</fullName>
    <description>As part of PR1050558-887 User story we build this formula</description>
    <formula>CASESAFEID(Contract.Opportunity_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract Opportunity Id</label>
    <type>Text</type>
</CustomField>