knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Contract_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Contract_RecordType__c</fullName>
    <formula>Contract.RecordType_DeveloperName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract_RecordType</label>
    <type>Text</type>
</CustomField>