knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Contract_Status__c.field-meta.xml
<CustomField>
    <fullName>Contract_Status__c</fullName>
    <formula>TEXT(Contract.Status)</formula>
    <label>Contract Status</label>
    <type>Text</type>
</CustomField>