knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Contract_Termination__c.field-meta.xml
<CustomField>
    <fullName>Contract_Termination__c</fullName>
    <label>Client Termination Date</label>
    <type>Date</type>
</CustomField>