knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Deleted__c.field-meta.xml
<CustomField>
    <fullName>Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deleted?</label>
    <type>Checkbox</type>
</CustomField>