knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Facility_Termination_Time__c.field-meta.xml
<CustomField>
    <fullName>Facility_Termination_Time__c</fullName>
    <label>Client Termination Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0000</fullName>
            </value>
            <value>
                <fullName>0100</fullName>
            </value>
            <value>
                <fullName>0130</fullName>
            </value>
            <value>
                <fullName>0200</fullName>
            </value>
            <value>
                <fullName>0230</fullName>
            </value>
            <value>
                <fullName>0300</fullName>
            </value>
            <value>
                <fullName>0330</fullName>
            </value>
            <value>
                <fullName>0400</fullName>
            </value>
            <value>
                <fullName>0430</fullName>
            </value>
            <value>
                <fullName>0500</fullName>
            </value>
            <value>
                <fullName>0530</fullName>
            </value>
            <value>
                <fullName>0600</fullName>
            </value>
            <value>
                <fullName>0630</fullName>
            </value>
            <value>
                <fullName>0700</fullName>
            </value>
            <value>
                <fullName>0730</fullName>
            </value>
            <value>
                <fullName>0800</fullName>
            </value>
            <value>
                <fullName>0830</fullName>
            </value>
            <value>
                <fullName>0900</fullName>
            </value>
            <value>
                <fullName>0930</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>1030</fullName>
            </value>
            <value>
                <fullName>1100</fullName>
            </value>
            <value>
                <fullName>1130</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
            <value>
                <fullName>1230</fullName>
            </value>
            <value>
                <fullName>1300</fullName>
            </value>
            <value>
                <fullName>1330</fullName>
            </value>
            <value>
                <fullName>1400</fullName>
            </value>
            <value>
                <fullName>1430</fullName>
            </value>
            <value>
                <fullName>1500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>