knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Facility_Title_Formula__c.field-meta.xml
<CustomField>
    <fullName>Facility_Title_Formula__c</fullName>
    <formula>Healthcare_Practitioner_Facility__r.Facility_Title__r.Name</formula>
    <label>Facility Title</label>
    <type>Text</type>
</CustomField>