knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/HM_Patient_Encounters__c.field-meta.xml
<CustomField>
    <fullName>HM_Patient_Encounters__c</fullName>
    <label>Annual HM Patient Encounters</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>