knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/HPF_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>HPF_Account_Id__c</fullName>
    <formula>CASESAFEID(Healthcare_Practitioner_Facility__r.AccountId)</formula>
    <label>HPF Account Id</label>
    <type>Text</type>
</CustomField>