knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Modified_By__c</fullName>
    <formula>LastModifiedBy.FirstName &amp; &quot; &quot; &amp; LastModifiedBy.LastName &amp; &quot;, &quot; &amp; TEXT(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Modified By</label>
    <type>Text</type>
</CustomField>