knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Leased_Employee__c.field-meta.xml
<CustomField>
    <fullName>Leased_Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Leased Employee</label>
    <type>Checkbox</type>
</CustomField>