knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>