knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Non_Compete_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_Compete_Type__c</fullName>
    <label>Non-Compete Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restriction Against SCP (Contact Legal)</fullName>
            </value>
            <value>
                <fullName>Restriction Against Client</fullName>
            </value>
            <value>
                <fullName>Mutual</fullName>
            </value>
            <value>
                <fullName>No Restriction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>