knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Number_of_Anticipate_Hours__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Anticipate_Hours__c</fullName>
    <label>Number of Anticipate Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>