knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Provider_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Provider_Restrictions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider Restrictions</label>
    <type>Checkbox</type>
</CustomField>