knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Related_Opty_Service_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Opty_Service_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opty Service Id</label>
    <referenceTo>Services__c</referenceTo>
    <relationshipLabel>Provider Network Contracts</relationshipLabel>
    <relationshipName>Provider_Network_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>