knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reviewed</label>
    <type>Checkbox</type>
</CustomField>