knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/SCP_Corporate_Entity__c.field-meta.xml
<CustomField>
    <fullName>SCP_Corporate_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCP Corporate Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeName__c</field>
            <operation>equals</operation>
            <value>Corporate_Entity</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Network Contracts (SCP Corporate Entity)</relationshipLabel>
    <relationshipName>Provider_Network_Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>