knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Service_Account__c.field-meta.xml
<CustomField>
    <fullName>Service_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Provider Network Contracts</relationshipLabel>
    <relationshipName>Provider_Network_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>