knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Services_Sold__c.field-meta.xml
<CustomField>
    <fullName>Services_Sold__c</fullName>
    <label>Services Sold</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Services_Sold</valueSetName>
    </valueSet>
</CustomField>