knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/SourceOpportunityId__c.field-meta.xml
<CustomField>
    <fullName>SourceOpportunityId__c</fullName>
    <formula>CASESAFEID(Contract.SourceOpportunity.Id)</formula>
    <label>SourceOpportunityId</label>
    <type>Text</type>
</CustomField>