knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Terminated_By__c.field-meta.xml
<CustomField>
    <fullName>Terminated_By__c</fullName>
    <label>Terminated By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Company</fullName>
            </value>
            <value>
                <fullName>Facility</fullName>
            </value>
            <value>
                <fullName>Facility Closure</fullName>
            </value>
            <value>
                <fullName>Mutual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>