knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Termination_Primary_Driver__c.field-meta.xml
<CustomField>
    <fullName>Termination_Primary_Driver__c</fullName>
    <label>Termination Primary Driver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial (Hospital Condition)</fullName>
            </value>
            <value>
                <fullName>Financial (Practice Condition)</fullName>
            </value>
            <value>
                <fullName>System Ownership/Vendor Alignment</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Hospital Cost Reduction Initiative</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>