knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/ProviderNetworkContract/fields/Time_Type_Formula__c.field-meta.xml
<CustomField>
    <fullName>Time_Type_Formula__c</fullName>
    <formula>TEXT(Healthcare_Practitioner_Facility__r.Time_Type__c)</formula>
    <label>Time Type</label>
    <type>Text</type>
</CustomField>